[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "kaleido>=1.0.0",
    "numpy>=2.3.2",
    "openai>=1.99.9",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "reportlab>=4.4.3",
    "requests>=2.32.4",
    "streamlit>=1.48.1",
    "trafilatura>=2.0.0",
    "xlsxwriter>=3.2.5",
    "yfinance>=0.2.65",
]
