[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alpha-vantage>=3.0.0",
    "anthropic>=0.64.0",
    "feedparser>=6.0.11",
    "finance-calendars>=0.0.7",
    "finvizfinance>=1.1.1",
    "google-genai>=1.30.0",
    "kaleido>=1.0.0",
    "matplotlib>=3.10.5",
    "mplfinance>=0.12.10b0",
    "newsapi>=0.1.1",
    "newsapi-python>=0.2.7",
    "numpy>=2.3.2",
    "openai>=1.99.9",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "reportlab>=4.4.3",
    "requests>=2.32.4",
    "streamlit>=1.48.1",
    "trafilatura>=2.0.0",
    "xlsxwriter>=3.2.5",
    "yfinance>=0.2.65",
]
